# DSP

./: CMakeLists.txt  main.cpp
inc/: complexNumberUnit.h  fourierTransformUnit.h  signalUnit.h  utilsUnit.h  vectorUnit.h
lib/: CMakeLists.txt
src/: complexNumberUnit.cpp  fourierTransformUnit.cpp  signalUnit.cpp  utilsUnit.cpp  vectorUnit.cpp
